# cpspg

./: .gitignore  README.md  cpspg.opam  dune-project  flake.nix
.github/workflows/: Test.yml
framtools/: Parsing.fram  README.md  Utils.fram
lib/: Ast.ml  Automaton.ml  AutomatonGen.ml  CodeGen.ml  CodeGenDot.ml  CodeGenFram.ml  CodeGenMl.ml  CodeGenMli.ml  Debug.ml  GrammarGen.ml  Lexer.mll  Parser.ml  Parser.mli  Parser.mly  Raw.ml  Types.ml  dune
lib/Backend/: Dot.ml  Ml.ml  Mli.ml  Printer.ml
test/: Calc.ml  When.ml  When.mly  common.ml  dune
test/calc/: Calc.fram  Parser.mly  ParserBase.mly  ParserPrec.mly  Parsing.fram  TestLexer.fram  Utils.fram  dune
test/cram/: 000_tokens.t  001_locations.t  Locations.ml  LocationsLexer.mll  LocationsParser.mly  Tokens.mly  dune
test/sexpr/: Parser.mly  SExpr.fram  dune
