(library
 (name cpspg))

(include_subdirs qualified)

(ocamllex
 (modules Lexer))

(rule
 (deps Parser.mly)
 (targets Parser.cpspg.ml Parser.cpspg.mli)
 (action
  (run cpspg --readable %{deps} %{targets})))

(rule
 (deps Standard.mly)
 (target Standard.ml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (echo "let contents = {standard|")
    (cat %{deps})
    (echo "|standard}")))))

(rule
 (alias bootstrap)
 (action
  (progn
   (diff Parser.ml Parser.cpspg.ml)
   (diff Parser.mli Parser.cpspg.mli))))
